# spark-kafka

./: .gitignore  main.py  pyproject.toml
checkpoints/weather/: .metadata.crc  metadata
checkpoints/weather/offsets/: .0.crc  0
checkpoints/weather/sources/0/: .0.crc  0
config/: spark-defaults.conf
docker/: docker-compose.yml
docker/producer/: Dockerfile
docker/spark/: Dockerfile
scripts/: setup.sh  start-pipeline.sh  stop-pipeline.sh
src/consumer/: spark_consumer.py
src/consumer/checkpoints/weather/: .metadata.crc  metadata
src/producer/: weather_producer.py
src/utils/: kafka_utils.py  test_setup.py
